tests/snapshots/run_wpt_conformance__coreml_min_float16_broadcast_2D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "min.https.any.js",
    "min float16 broadcast 2D to 4D",
    "coreml",
    "PASS",
)
