tests/snapshots/run_wpt_conformance__coreml_min_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "min.https.any.js",
    "min float32 1D constant tensors",
    "coreml",
    "PASS",
)
