tests/snapshots/run_wpt_conformance__coreml_min_float32_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "min.https.any.js",
    "min float32 3D tensors",
    "coreml",
    "PASS",
)
